--- a/main_app/templates/birdlist.html
+++ b/main_app/templates/birdlist.html
@@ -5,10 +5,21 @@ Bird List
 {% endblock %}
 
 {% block content %}
-<h1>Our Birds:</h1>
+
+<form>
+    <div>
+        <!-- searches for the name of the cat -->
+        <input type="text" name="name" placeholder="name"/>
+        <input type="submit" value="Search"/>
+    </div>
+    <!-- this a tag will redirect back to birdlist without a query param! be sure to use the "name" you called the route in your main_app/urls.py -->
+    <a href="{% url 'bird_list' %}">Clear Search</a>
+</form>
+<h1>Birds</h1>
     {% for bird in birds %}
-        <h3>Name: {{bird.name}}</h3>
-        <h3>Age: {{bird.age}}</h3>
-        <h3>Gender: {{bird.gender}}</h3>
+    <img src="{{bird.img}}" alt="{{bird.name}}">
+    <h3>Name: {{bird.name}}</h3>
+    <h3>Age: {{bird.age}}</h3>
+    <h3>Gender: {{bird.gender}}</h3>
     {% endfor %}
 {% endblock %}
