create and view part of crud completed

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -12,8 +12,10 @@
 </head>
 <body>
     <nav>
-        <li>Home</li>
-        <li>About</li>
+        <a href="/">Home |</a>
+        <a href="/about">About |</a>
+        <a href="/birds">Birds |</a>
+        <a href="{% url 'bird_create' %}">Add a Cat |</a>
     </nav>
     {% block content %}
 
