completed full CRUD on birds and uupdated the birds int:pk path in the urls.py

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -15,7 +15,7 @@
         <a href="/">Home |</a>
         <a href="/about">About |</a>
         <a href="/birds">Birds |</a>
-        <a href="{% url 'bird_create' %}">Add a Cat |</a>
+        <a href="{% url 'bird_create' %}">Add a Bird |</a>
     </nav>
     {% block content %}
 
