create one to many relationship for birds

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <nav>
+        <a href="/admin">Admin</a>
         <a href="/">Home |</a>
         <a href="/about">About |</a>
         <a href="/birds">Birds |</a>
