create birdhouse type migration and fix the GET error fir list of bird houses and teh function to add a birdhouse

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -16,7 +16,9 @@
         <a href="/">Home |</a>
         <a href="/about">About |</a>
         <a href="/birds">Birds |</a>
+        <a href="/birdhouses">Bird Houses |</a>
         <a href="{% url 'bird_create' %}">Add a Bird |</a>
+        <a href="{% url 'birdhouses_create' %}">Add a BirdHouse |</a>
     </nav>
     {% block content %}
 
