--- a/main_app/templates/birdhouse_index.html
+++ b/main_app/templates/birdhouse_index.html
@@ -8,7 +8,7 @@
             <a href="{% url 'birdhouses_show' birdhouse.id %}">
                 <div class="card-content">
                     <span>{{ birdhouse.name }}</span>
-                    <p>Type: {{ birdhouse.type }}</p>
+                    <p>House_Type: {{ birdhouse.house_type }}</p>
                 </div>
             </a>
         </div>
