add styling and update static folders and url patterns to help reload changes in browser.

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -5,5 +5,12 @@ Django Birds About
 {% endblock %}
 
 {% block content %}
-<h1>About Page</h1>
+
+<div class="container" id="about">
+    <br>
+    <h1>About Django Birds</h1>
+    <p>This site is built using Python and Django, and hosts a database with multiple models.</p>
+    <p>This is a place to post information about your birds, and their houses!</p>
+</div>
+
 {% endblock %}
