--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -6,47 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CDN SCRIPTS CSS go here -->
-    <link rel="stylesheet" href="{% static 'styles/styles.css'%}"/>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}"/>
     <script src="{% static 'scripts/app.js' %}" defer></script>
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-    <nav classname="">
+    <nav>
         {% if user.is_authenticated %}
-        <span><a href="{% url 'profile' user.username %}">Hello, {{ user.username }}!</a></span>
-        <span> | </span>
+        <span><a href="{% url 'profile' user.username %}">Hello, {{ user.username }}!</a></span>       
         <span><a href="{% url 'logout' %}">Logout</a></span>
-        <span> | </span>
         {% else %}
-        <span><a href="{% url 'login' %}">Login</a></span>
-        <span> | </span>
+        <span><a href="{% url 'login' %}">Login</a></span>       
         <span><a href="{% url 'signup' %}">SignUp</a></span>
         {% endif %}
-        <a href="/admin">Admin</a>
-        <span> | </span>
-        <a href="/">Home</a>
-        <span> | </span>
-        <a href="/about">About</a>
-        <span> | </span>
-        <a href="/birds">Birds</a>
-        <span> | </span>
+        <a href="/admin">Admin</a>       
+        <a href="/">Home</a>        
+        <a href="/about">About</a>      
+        <a href="/birds">Birds</a>       
         <a href="/birdhouses">Bird Houses</a>
-        <span> | </span>
         <a href="{% url 'bird_create' %}">Add a Bird</a>
-        <span> | </span>
         <a href="{% url 'birdhouses_create' %}">Add a Bird House</a>
-        <span> | </span>
-
-
-
-
-        <!-- <a href="/admin">Admin</a>
-        <a href="/">Home |</a>
-        <a href="/about">About |</a>
-        <a href="/birds">Birds |</a>
-        <a href="/birdhouses">Bird Houses |</a>
-        <a href="{% url 'bird_create' %}">Add a Bird |</a>
-        <a href="{% url 'birdhouses_create' %}">Add a BirdHouse |</a> -->
     </nav>
     {% block content %}
 
